# 13a_GraphQL

./: README.md  fastapi_graphql_example.md  graphql_schema_overview.md  main.py  pyproject.toml  schema.graphql
mock_db/: data.py  database.py  entities.py  error.py  resources.py
routers/graphql_router/: graphql_controller.py
routers/rest_routers/: author_controller.py  book_controler.py
