[project]
name = "13a-graphql"
version = "0.1.0"
description = ""
authors = [
    {name = "Oliver",email = "oljo0003@stud.kea.dk"}
]
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "uvicorn (>=0.34.1,<0.35.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "ariadne (>=0.26.1,<0.27.0)"
]

[tool.poetry]
packages = [{include = "13a"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
